# fuc

./: .gitattributes  Cargo.toml  README.md  lint.sh
.github/workflows/: cid.yml
comparisons/: README.md
comparisons/cp_rayon/: Cargo.toml
comparisons/cp_rayon/src/: main.rs
comparisons/cp_stdlib/: Cargo.toml
comparisons/cp_stdlib/src/: main.rs
comparisons/fcp_cp/: Cargo.toml
comparisons/fcp_cp/src/: main.rs
comparisons/og_crappy_rm/: Cargo.toml
comparisons/og_crappy_rm/src/: main.rs
comparisons/rayon_cp/: Cargo.toml
comparisons/rayon_cp/src/: lib.rs  main.rs
comparisons/rayon_rm/: Cargo.toml
comparisons/rayon_rm/src/: lib.rs  main.rs
comparisons/rm_og_crappy/: Cargo.toml
comparisons/rm_og_crappy/src/: lib.rs  main.rs
comparisons/rm_rayon/: Cargo.toml
comparisons/rm_rayon/src/: main.rs
comparisons/rm_remove_dir_all/: Cargo.toml
comparisons/rm_remove_dir_all/src/: main.rs
comparisons/rm_stdlib/: Cargo.toml
comparisons/rm_stdlib/src/: main.rs
comparisons/stdlib_cp/: Cargo.toml
comparisons/stdlib_cp/src/: lib.rs  main.rs
comparisons/stdlib_rm/: Cargo.toml
comparisons/stdlib_rm/src/: lib.rs  main.rs
comparisons/tools/: Cargo.toml
comparisons/tools/src/: main.rs
cpz/: Cargo.toml  README.md  command-reference-short.golden  command-reference.golden
cpz/benches/: copy_methods.rs
cpz/src/: main.rs
fcp/: Cargo.toml
fcp/benches/: copy_methods.rs
frm/: Cargo.toml
fuc_core/: Cargo.toml
fuc_core/src/: errors.rs
fuc_engine/: Cargo.toml  README.md  api.golden
fuc_engine/src/: lib.rs
fuc_engine/src/ops/: copy.rs  mod.rs  remove.rs
fuc_engine/tests/: api.rs  copy.rs  delete.rs  remove.rs
rmz/: Cargo.toml  README.md  command-reference-short.golden  command-reference.golden
rmz/benches/: rmz.rs
rmz/src/: main.rs
rmz/tests/: api.rs
tests/: api.rs
