[workspace]
members = [
    "cpz",
    "fuc_engine",
    "rmz",
    "comparisons/rayon_rm",
    "comparisons/og_crappy_rm",
    "comparisons/stdlib_rm",
    "comparisons/rayon_cp",
    "comparisons/stdlib_cp",
]

[workspace.package]
version = "1.0.0"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
repository = "https://github.com/SUPERCILEX/fuc"
license = "Apache-2.0"

[package]
name = "lint"
version = "0.0.0"
publish = false

[dev-dependencies]
supercilex-tests = "0.2.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dr]
inherits = "release"
debug = true
strip = false
