[workspace]
members = [
    "cpz",
    "fuc_engine",
    "rmz",
    "comparisons/cp_rayon",
    "comparisons/cp_stdlib",
    "comparisons/rm_og_crappy",
    "comparisons/rm_rayon",
    "comparisons/rm_remove_dir_all",
    "comparisons/rm_stdlib",
    "comparisons/tools",
]

[workspace.package]
version = "1.1.10"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
repository = "https://github.com/SUPERCILEX/fuc"
license = "Apache-2.0"
rust-version = "1.74"

[package]
name = "lint"
version = "0.0.0"
publish = false

[dev-dependencies]
supercilex-tests = { version = "0.4.4", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dr]
inherits = "release"
debug = true
strip = false
