[package]
name = "cpz"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Fast cp provides an alternative to cp that focuses on maximizing performance."
repository.workspace = true
keywords = ["tools", "files", "cp"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
clap = { version = "4.5.32", features = ["derive", "wrap_help"] }
error-stack = { version = "0.5.0", default-features = false, features = ["std"] }
fuc_engine = { version = "1", path = "../fuc_engine" }
indicatif = { version = "0.17.11", optional = true }
thiserror = "2.0.12"
tracing = { version = "0.1.41", optional = true }
tracing-indicatif = { version = "0.3.9", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
tracing-tracy = { version = "0.11.4", features = ["flush-on-exit"], optional = true }
tracy-client = { version = "0.18.0", optional = true }

[dev-dependencies]
cache-size = "0.7.0"
criterion = "0.5.1"
memmap2 = "0.9.5"
rand = "0.9.0"
supercilex-tests = { version = "0.4.16", default-features = false, features = ["clap"] }
tempfile = "3.18.0"
trycmd = "0.15.9"

[target.'cfg(unix)'.dev-dependencies]
rustix = { version = "1.0.2", features = ["fs", "pipe"] }

[features]
trace = ["fuc_engine/tracing", "dep:tracing", "dep:tracing-subscriber", "dep:tracing-tracy", "dep:tracy-client"]
progress = ["fuc_engine/tracing", "dep:tracing", "dep:tracing-subscriber", "dep:tracing-indicatif", "dep:indicatif"]

[[bench]]
name = "copy_methods"
harness = false
