[package]
name = "fcp"
version = "0.1.0"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
description = "Fast cp provides an alternative to cp that focuses on maximizing performance."
repository = "https://github.com/SUPERCILEX/fuc"
keywords = ["tools", "files", "cp"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license = "Apache-2.0"
