[package]
name = "fuc_core"
version = "0.1.0"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
description = "Core utils for the FUCing project."
repository = "https://github.com/SUPERCILEX/fuc"
keywords = ["tools", "files"]
categories = ["filesystem"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.51"
exitcode = "1.1.2"
