[package]
name = "fuc_engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Engine for the FUCing project."
repository.workspace = true
keywords = ["tools", "files"]
categories = ["filesystem"]
license.workspace = true

[dependencies]
bon = "3.9.0"
thiserror = "2.0.18"
tracing = { version = "0.1.44", default-features = false, features = ["attributes"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
lockness-executor = { path = "/home/asaveau/Desktop/wip/lockness/executor" }
rustix = { version = "1.1.4", features = ["fs", "thread", "linux_latest"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rayon = "1.11.0"

[target.'cfg(target_os = "windows")'.dependencies]
remove_dir_all = { version = "1.0.0", features = ["parallel"] }

[dev-dependencies]
ftzz = "4.0.0"
io-adapters = "0.4.0"
rstest = { version = "0.26.1", default-features = false }
supercilex-tests = { version = "0.4.21", default-features = false, features = ["api"] }
tempfile = "3.25.0"
