[package]
name = "rmz"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Fast rm provides an alternative to rm that focuses on maximizing performance."
repository.workspace = true
keywords = ["tools", "files", "rm"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license.workspace = true

[dependencies]
clap = { version = "4.5.9", features = ["derive", "wrap_help"] }
error-stack = { version = "0.5.0", default-features = false, features = ["std"] }
fuc_engine = { version = "1", path = "../fuc_engine" }
indicatif = { version = "0.17.8", optional = true }
thiserror = "1.0.62"
tracing = { version = "0.1.40", optional = true }
tracing-indicatif = { version = "0.3.6", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
tracing-tracy = { version = "0.11.0", features = ["flush-on-exit"], optional = true }
tracy-client = { version = "0.17.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
ftzz = "3.0.0"
io-adapters = "0.3.0"
remove_dir_all = { version = "0.8.2", features = ["parallel"] }
rm_og_crappy = { path = "../comparisons/rm_og_crappy" }
rm_rayon = { path = "../comparisons/rm_rayon" }
supercilex-tests = { version = "0.4.6", default-features = false, features = ["clap"] }
tempfile = "3.10.1"
trycmd = "0.15.4"

[features]
trace = ["fuc_engine/tracing", "dep:tracing", "dep:tracing-subscriber", "dep:tracing-tracy", "dep:tracy-client"]
progress = ["fuc_engine/tracing", "dep:tracing", "dep:tracing-subscriber", "dep:tracing-indicatif", "dep:indicatif"]

[[bench]]
name = "rmz"
harness = false
